--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This is the README file for the Mobile Designer project
+A planning tool for architects and urban designers for the iPhone.
+
+Built Fall 2010 by Alex Churchill on Manoli Liodakis's computer.
